--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,24 @@
 spring:
+  profiles:
+    active: local
+---
+spring:
   datasource:
-    url: jdbc:h2:mem:batch
+    url: jdbc:h2:mem:batch;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  config:
+    activate:
+      on-profile: local
+---
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/batch
+    username: root
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  config:
+    activate:
+      on-profile: mysql
+
