--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
+	annotationProcessor('org.projectlombok:lombok')
 }
 
 tasks.named('test') {
